# icloud-nfs-exporter

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
Formula/: icloud-nfs-exporter.rb
docs/internal/: README.md
docs/internal/reports/: M2-fuse-driver.md  e2e-fuse-mount-test.md  fuse-passthrough.md
docs/reports/: M0-scaffold-ci.md  M1-hydration-daemon.md  M3-nfs-wiring.md  M4-menu-bar-app.md  M5-setup-wizard.md  M6-distribution.md  v0.2-swiftui-migration.md
docs/research/: apple-design-award-criteria.md  macos-app-design-rules.md  v0.2-design-recommendations.md  v0.2-implementation-plan.md
docs/templates/: CLAUDE-template.md
launchd/: com.wizz-cmd.icloud-nfs-exporter.plist.template  com.wizz-cmd.icloud-nfs-server.plist.template
scripts/: build-release.sh  create-app-bundle.sh  create-dmg.sh  fskit-test.sh  icne
scripts/icne_lib/: config.py  diagnose.py  icloud.py  ipc.py  nfs.py  wizard.py
src/app/: Package.swift
src/app/Sources/MenuBarApp/: AdvancedSettingsTab.swift  AppDelegate.swift  AppState.swift  ConfigReader.swift  MenuBarApp.swift  (+6 more)
src/fuse/: Cargo.toml
src/fuse/fuse-core/: Cargo.toml
src/fuse/fuse-driver/: Cargo.toml
src/helper/: Package.swift
src/hydration/: Package.swift
src/nfs/: Cargo.toml
src/nfs/nfs-server/: Cargo.toml
src/nfs/nfs-server/src/: icloud_nfs.rs  main.rs
tests/: test_icne.py
(+17 files in other folders)
